--- a/react-memeGenerator-project3/src/App.css
+++ b/react-memeGenerator-project3/src/App.css
@@ -1,87 +1,95 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
-  font-family: Poppins, sans-serif;
 }
 
-.container {
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 40px 50px;
-  background-color: gainsboro;
+body {
+  font-family: "Karla", sans-serif;
+  margin: 0;
 }
 
-.meme-container {
-  width: 500px;
-  height: auto;
-  background: white;
+main {
+  padding: 36px;
 }
 
 .header {
-  width: 100%;
-  height: auto;
-  padding: 10px 8px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  background: linear-gradient(
-    90deg,
-    hsla(277, 74%, 24%, 1) 0%,
-    hsla(279, 64%, 50%, 1) 100%
-  );
-}
-
-.header h2 {
-  color: gainsboro;
-}
-
-.header p {
+  height: 65px;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
   color: white;
-  font-size: 14px;
-}
-
-.form {
-  width: 100%;
-  height: auto;
   padding: 20px;
 }
 
-.form .inputs {
-  width: 100%;
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.header--image {
+  height: 100%;
+  margin-right: 6px;
 }
 
-.form .inputs input {
-  flex-basis: 48%;
-  outline: none;
-  border: 1px solid gray;
-  height: 35px;
-  border-radius: 7px;
-  padding-left: 10px;
+.header--title {
+  font-size: 1.25rem;
+  margin-right: auto;
 }
 
-.form button {
-  width: 100%;
-  outline: none;
-  border: none;
-  border-radius: 7px;
-  padding: 11px;
+.header--project {
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+  margin-bottom: 17px;
+}
+
+.form--input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #d5d4d8;
+  text-indent: 5px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
   color: white;
-  background: linear-gradient(
-    90deg,
-    hsla(277, 74%, 24%, 1) 0%,
-    hsla(279, 64%, 50%, 1) 100%
-  );
+  border: none;
   cursor: pointer;
 }
 
-.form-div img {
+.meme {
+  position: relative;
+}
+
+.meme--image {
   max-width: 100%;
+  border-radius: 3px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
